# matrix_lib

./: .pre-commit-config.yaml  README.md  pyproject.toml  test_run.py
doc/: first_steps_log.md  publishing_log.md
examples/: example_1_hello_world.ipynb  example_2_full_matrix.ipynb
src/matrix_lib/: __init__.py  band_matrix.py  banded_matrix.py  base_matrix.py  full_matrix.py  main.py  matrix.py  symmetric_matrix.py  text_block.py  triangular_matrix.py
ut/: test_band_matrix.py  test_base_matrix.py  test_full_matrix.py  test_import.py  test_run_and_import.py  test_symmetric_matrix.py  test_triangular_matrix.py
