[project]
name = "matrix-lib"
version = "0.1.0"
description = "Lab 3 for Matrix Calculations course"
readme = "README.md"
authors = [
    { name = "isvoropaev02", email = "is.voropaev@gmail.com" }
    { name = "mikzuker", email = "mikzuker@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
