[project]
name = "matrix-lib"
version = "0.1.0"
description = "Lab 3 for Matrix Calculations course"
readme = "README.md"
authors = [
    { name = "isvoropaev02", email = "is.voropaev@gmail.com" },
    { name = "mikzuker", email = "mikzuker@gmail.com" },
    { name = "Dmitry-Malov", email = "mityamalov@yandex.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.5",
    "scipy>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pytest.ini_options]
testpaths = ["ut"]
python_files = "test_*.py"
python_functions = "run_test*"
